--- a/SCM_Water_Back/src/main/resources/templates/creates.html
+++ b/SCM_Water_Back/src/main/resources/templates/creates.html
@@ -11,7 +11,7 @@
             <fieldset class="layui-elem-field">
                 <legend>仓库管理 - 修改</legend>
                 <div class="layui-field-box">
-                        <div class="layui-form-item">
+                        <!-- <div class="layui-form-item">
                             <label class="layui-form-label">商品序号</label>
                             <div class="layui-input-inline">
                             <input th:value="${repertoryDetails.commodityid}" type="text" name="password" required lay-verify="required"  autocomplete="off" class="layui-input">
@@ -27,14 +27,19 @@
                             <div class="layui-input-inline">
                            <input th:value="${repertoryDetails.repertoryamount}" type="text" name="password" required lay-verify="required"  autocomplete="off" class="layui-input">
                             </div>
-                        </div>
+                        </div> -->
                         <div class="layui-form-item">
                             <label class="layui-form-label">库存充裕状态</label>
                             <div class="layui-input-inline">
-                            <input th:value="${repertoryDetails.repertorystate}" type="text" name="password" required lay-verify="required"  autocomplete="off" class="layui-input">
+                            <select id="repertorystate">
+                            <option value="0">请选择</option>
+                            <option value="充裕">充裕</option>
+                            <option value="缺货">缺货</option>
+                            </select>
+                            <!-- <input th:value="${repertoryDetails.repertorystate}" type="text" name="password" required lay-verify="required"  autocomplete="off" class="layui-input"> -->
                             </div>
                         </div>
-                        <div class="layui-form-item">
+                       <!--  <div class="layui-form-item">
                             <label class="layui-form-label">商品进价</label>
                             <div class="layui-input-inline">
                             <input th:value="${repertoryDetails.commodityenter}" type="text" name="password" required lay-verify="required"  autocomplete="off" class="layui-input">
@@ -42,24 +47,24 @@
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">商品销售价</label>
-                            <div class="layui-input-inline">
+                            <div class="layui-input-inline"> 	
                             <input th:value="${repertoryDetails.commoditysale}" type="text" name="password" required lay-verify="required"  autocomplete="off" class="layui-input">
                             </div>
                         </div>
-                       <!--  <div class="layui-form-item">
+                        <div class="layui-form-item">
                             <label class="layui-form-label">商品图片</label>
                             <div class="layui-input-inline">
                            <img th:src="">
                             </div>
-                        </div> -->
+                        </div>
                         <div class="layui-form-item">
                             <div class="layui-input-block">
                             </div>
-                        </div>
+                        </div> -->
                          <div class="layui-form-item">
                             <div class="layui-input-block">
-                            <button th:dw-url="'repertoryUpdate?repertoryid='+${repertoryDetails.commodityid}" class="layui-btn">修改</button>
-                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                            <button class="layui-btn" th:onclick="'update('+${repertoryDetails.commodityid}+')'">修改</button>
+                            <!-- <a th:href="sss"><button class="layui-btn">返回</button></a> -->
                             </div>
                         </div>
                 </div>
@@ -70,5 +75,32 @@
 <script type="text/javascript" src="./javascript/jquery.min.js"></script>
 <script type="text/javascript" src="./layui/layui.js"></script>
 <script type="text/javascript" src="./javascript/dw_form_submit.js"></script>
+
+<script type="text/javascript">
+function update(id) {
+var repertorystate=$("#repertorystate").val();
+if(repertorystate==0){
+	alert("请选择");
+}else{
+	$.ajax({
+		url : "repertoryUpdate?repertoryid="+id+"&repertorystate="+repertorystate,
+		type : "POST",
+		dataType : "json",
+		contentType : "application/json;charset=UTF-8",
+		success : function(data) {
+		if(data>0){
+			 window.layer.close(1);
+			 window.parent.location.reload();
+		}
+		},
+		error : function(result) {
+			alert("失败");
+		}
+	});  
+	/* location="repertoryUpdate?repertoryid="+id+"&repertorystate="+repertorystate; */
+}
+
+}
+</script>
 </body>
 </html>
