--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/cart.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/cart.html
@@ -58,18 +58,20 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:each="shopping,iterStat:${shoppingList}">
+									<tr  th:each="shopping,iterStat:${shoppingList}" th:class="'del'+${shopping.id}">
 										<td class="pro-thumbnail"><a href="#"><img
 												th:src="'lm/img/shui/'+${shopping.img}" /></a></td>
 										<td class="pro-title" th:text="${shopping.state}"></td>
 										<td class="pro-price">￥<span class="amount"
 											th:text="${#numbers.formatDecimal(shopping.commoditySale, 0, 2)}"></span></td>
 										<td class="pro-quantity"><div class="product-quantity">
-												<input type="text" th:value="${shopping.count}" />
+												<input type="text" th:value="${shopping.count}" class="cartCount"/>
+												<input type="hidden" th:value="${shopping.id}" class="cartId"/>
 											</div></td>
 										<td class="pro-subtotal">￥<span class="pro-total"
 											th:text="${#numbers.formatDecimal(shopping.money, 0, 2)}"></span></td>
-										<td class="pro-remove"><a>×</a></td>
+										<td class="pro-remove"><a
+											th:onclick="'delCart('+${shopping.id}+')'">×</a></td>
 									</tr>
 
 								</tbody>
@@ -93,15 +95,15 @@
 											<td style="font-weight: bold;"><span>￥</span><span
 												class="totals"></span></td>
 										</tr>
-										
+
 									</tbody>
-									
+
 								</table>
 
 								<div class="proceed-to-checkout section mt-30">
 									<!-- <button class="add-to-cart" type="submit">购买</button> -->
-									<a onclick="submitt()">去结算</a>
-									<input type="hidden" name="total">
+									<a onclick="submitt()">去结算</a> <input type="hidden"
+										name="total">
 								</div>
 							</div>
 						</div>
@@ -109,10 +111,7 @@
 				</div>
 			</div>
 		</div>
-
-
 		<div class="footerpage"></div>
-
 
 	</div>
 	<script src="lm/js/vendor/jquery-3.1.1.min.js"></script>
@@ -130,23 +129,23 @@
 		$('.product-quantity')
 				.append(
 						'<span class="dec qtybtn"><i class="fa fa-angle-left"></i></span><span class="inc qtybtn"><i class="fa fa-angle-right"></i></span>');
-		$('.qtybtn').on(
-				'click',
-				function() {
+		$('.qtybtn').on('click',function() {
 					var $button = $(this);
+					var cartId=$button.parent().find(".cartId").val();
+					var newVal;
 					var price = $button.parent().parent().prev()
 							.find(".amount").text();
 					var oldValue = $button.parent().find('input').val();
 					if ($button.hasClass('inc')) {
-						var newVal = parseFloat(oldValue) + 1;
+						newVal= parseFloat(oldValue) + 1;
 					} else {
 						if (oldValue > 0) {
-							var newVal = parseFloat(oldValue) - 1;
+							 newVal = parseFloat(oldValue) - 1;
 						} else {
 							newVal = 0;
 						}
 					}
-					$button.parent().find('input').val(newVal);
+					$button.parent().find('.cartCount').val(newVal);
 					var total = price * newVal;
 					if (total % 1 == 0) {
 						total = total + ".00";
@@ -155,6 +154,22 @@
 					}
 					$button.parent().parent().next().find(".pro-total").html(
 							total);
+					/* alert(total);
+					alert(newVal) */
+				 	 $.ajax({
+			 				url : "updCart?id="+cartId+"&count="+newVal+"&money="+total,
+			 				type : "POST",
+			 				dataType : "json",
+			 				contentType : "application/json;charset=UTF-8",
+			 				success : function(data) {
+			 				
+			 				},
+			 				error : function() {
+			 					alert("失败");
+			 				}
+			 			}); 
+					
+					
 					//数量修改后重新计算总金额
 					showtotal();
 				});
@@ -175,14 +190,33 @@
 			$(".order-total").find(".totals").html(totals);
 			$("input[name=total]").val(totals);
 		}
-		$(".pro-remove").on('click', function() {
-			alert(1);
-
-		})
+		function  delCart(id) {
+         if(confirm("确定从购物车删除这个商品?")){
+        	 $.ajax({
+ 				url : "delCart?shoppingId="+id,
+ 				type : "POST",
+ 				dataType : "json",
+ 				contentType : "application/json;charset=UTF-8",
+ 				success : function(data) {
+ 				if(data>0){
+ 					$(".del"+id).remove();
+ 					
+ 				}
+ 				},
+ 				error : function() {
+ 					alert("失败");
+ 				}
+ 			});
+			}
+		}
 
 		function submitt() {
 			var form = document.getElementById('subform');
 			form.submit();
+		}
+		
+		function  updCart() {
+			
 		}
 
 		/* 	function delcart() {
