--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/product-details.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/product-details.html
@@ -22,7 +22,7 @@
 		<header class="header-section section sticker">
 			<div class="headerpage"></div>
 		</header>
-		
+
 		<div class="page-banner-section section">
 			<div class="container">
 				<div class="row">
@@ -39,92 +39,111 @@
 			</div>
 		</div>
 		<div class="page-section section pt-120 pb-120">
-		<form action="settleAccount" method="post">
-			<div class="container">
-				<div class="row mb-40">
-					<div class="col-md-5 col-sm-6 col-xs-12 mb-40">
-						<div class="tab-content mb-10">
-							<div class="pro-large-img tab-pane active" id="pro-large-img-1">
-								<img th:src="'lm/img/shui/'+${commodity.img}"/>
+			<form action="settleAccount" method="post">
+				<div class="container">
+					<div class="row mb-40">
+						<div class="col-md-5 col-sm-6 col-xs-12 mb-40">
+							<div class="tab-content mb-10">
+								<div class="pro-large-img tab-pane active" id="pro-large-img-1">
+									<img th:src="'lm/img/shui/'+${commodity.img}" />
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-7 col-sm-6 col-xs-12 mb-40">
-						<div class="product-details section">
-							<!-- Title -->
-							<h1 class="title" th:text="${commodity.state}"></h1>
-							<input type="hidden" name="commodityid" th:value="${commodity.commodityid}"/>
-							<input type="hidden" name="way" value="1"/>
-							<div class="price-ratting section">
-								<h5 class="pd-sub-title">单价</h5>
-								<span class="price float-left unit">￥ <span th:text="${#numbers.formatDecimal(commodity.commoditysale, 0, 2)}"  class="new">
-										</span></span>
-								<span class="ratting float-right"> <i
-									class="fa fa-star active"></i> <i class="fa fa-star active"></i>
-									<i class="fa fa-star active"></i> <i class="fa fa-star active"></i>
-									<i class="fa fa-star active"></i>
-								</span>
-							</div>
-							<div class="product-size section">
-								<h5 class="pd-sub-title">总金额</h5>
-								<span class="price float-left">￥<span  class="new tatol">
-										</span></span>
-									<input type="hidden" name="total"/>
-							</div>
-							<h5 class="pd-sub-title">数量</h5>
-							<div class="quantity-cart section">
-								<div class="product-quantity">
-									<input type="text" name="count" value="1" onblur="tatol()">
+						<div class="col-md-7 col-sm-6 col-xs-12 mb-40">
+							<div class="product-details section">
+								<!-- Title -->
+								<h1 class="title" th:text="${commodity.state}"></h1>
+								<input type="hidden" name="commodityid"
+									th:value="${commodity.commodityid}" /> <input type="hidden"
+									name="way" value="1" />
+								<div class="price-ratting section">
+									<h5 class="pd-sub-title">单价</h5>
+									<span class="price float-left unit">￥ <span
+										th:text="${#numbers.formatDecimal(commodity.commoditysale, 0, 2)}"
+										class="new"> </span></span> <span class="ratting float-right">
+										<i class="fa fa-star active"></i> <i class="fa fa-star active"></i>
+										<i class="fa fa-star active"></i> <i class="fa fa-star active"></i>
+										<i class="fa fa-star active"></i>
+									</span>
 								</div>
-								<div>
-									<button class="add-to-cart" type="submit">购买</button>
-									<button class="add-to-cart">添加到购物车</button>
+								<div class="product-size section">
+									<h5 class="pd-sub-title">总金额</h5>
+									<span class="price float-left">￥<span class="new tatol">
+									</span></span> <input type="hidden" name="total" />
+								</div>
+								<h5 class="pd-sub-title">数量</h5>
+								<div class="quantity-cart section">
+									<div class="product-quantity">
+										<input type="text" name="count" value="1" onblur="tatol()">
+									</div>
+									<div>
+										<button class="add-to-cart" type="submit">购买</button>
+										<button class="add-to-cart" type="button" onclick="addcart()">添加到购物车</button>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 			</form>
-		<div class="footerpage"></div>
+			<div class="footerpage"></div>
 		</div>
-</div>
+	</div>
 	<script src="lm/js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="lm/js/bootstrap.min.js"></script>
 	<script src="lm/js/plugins.js"></script>
 	<script src="lm/js/ajax-mail.js"></script>
 	<script src="lm/js/main.js"></script>
-		<script type="text/javascript">
+	<script type="text/javascript">
 		$(".headerpage").load("lm/header.html");
 		$(".footerpage").load("lm/footer.html");
-		function tatol(){
-			var count=$(".product-quantity input").val();
-			var price=$(".unit span").text();
-			var total=count*price+".00";
+		function tatol() {
+			var count = $(".product-quantity input").val();
+			var price = $(".unit span").text();
+			var total = count * price + ".00";
 			$(".tatol").html(total);
 			$("input[name=total]").val(total);
 		}
 		$(function() {
 			tatol();
 		});
-		
-		function  buy() {
-			/* var commodityid=$("input[name=commodityid]").val();
-			var count=$("input[name=count]").val();
-			var total=$("input[name=total]").val(); */
-			/* $.ajax({
-				url : "buy?commodityid="+commodityid+"&count="+count+"&total="+total,
-				type : "POST", 
-			 	data : {"commodityid":commodityid,"count":count,"total":total}, 
-				 dataType : "json",
-				contentType : "application/json;charset=UTF-8", 
-				 success : function(data) {
+
+		function addcart() {
+			var commodityid = $("[name=commodityid]").val();
+			var count = $("[name=count]").val();
+			var total = $("[name=total]").val();
+			$.ajax({
+				url : "addCart?commodityId="+commodityid+"&count="+count+"&money="+total,
+				type : "POST",
+				dataType : "json",
+				contentType : "application/json;charset=UTF-8",
+				success : function(data) {
+					if(data>0){
+						alert("已成功添加到购物车")
+					}
 				},
 				error : function() {
 					alert("失败");
-				} 
-			 });  */
-		} 
+				}
+			});
+		}
+		/* 	function  buy() {
+				var commodityid=$("input[name=commodityid]").val();
+				var count=$("input[name=count]").val();
+				var total=$("input[name=total]").val(); 
+				 $.ajax({
+					url : "buy?commodityid="+commodityid+"&count="+count+"&total="+total,
+					type : "POST", 
+				 	data : {"commodityid":commodityid,"count":count,"total":total}, 
+					 dataType : "json",
+					contentType : "application/json;charset=UTF-8", 
+					 success : function(data) {
+					},
+					error : function() {
+						alert("失败");
+					} 
+				 }); 
+			}  */
 	</script>
 </body>
 
