--- a/SCM_Water_Back/src/main/resources/templates/commodityAdd.html
+++ b/SCM_Water_Back/src/main/resources/templates/commodityAdd.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Type"  content="multipart/form-data; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="./layui/css/layui.css">
 </head>
@@ -12,12 +11,12 @@
             <fieldset class="layui-elem-field">
                 <legend>用户管理 - 新增用户</legend>
                 <div class="layui-field-box">
-                    <form class="layui-form" action="commodityAdd" 
+                    <form  action="commodityAdd"
                     method="post" enctype="multipart/form-data">
                         <div class="layui-form-item">
                             <label class="layui-form-label">商品名称</label>
                             <div class="layui-input-inline">
-                            <input type="text" name="commodityName" required lay-verify="required" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
+                            <input type="text" name="commodityName"  placeholder="请输入商品名称" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                          <div class="layui-form-item">
@@ -53,12 +52,12 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">商品图片</label>
                             <div class="layui-input-inline">
-                            <input type="file" name="file" />
+                            <input type="file" name="myFile" />
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <div class="layui-input-block">
-                            <button class="layui-btn"  type="submit">
+                            <button class="layui-btn" type="submit">
                             	立即提交
                             </button>
                             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
@@ -73,5 +72,6 @@
 <script type="text/javascript" src="./javascript/jquery.min.js"></script>
 <script type="text/javascript" src="./layui/layui.js"></script>
 <script type="text/javascript" src="./javascript/dw_form_submit.js"></script>
+
 </body>
 </html>
