--- a/SCM_Water_Back/src/main/resources/templates/createss.html
+++ b/SCM_Water_Back/src/main/resources/templates/createss.html
@@ -53,9 +53,9 @@
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <label class="layui-form-label">商品图片</label>
-                            <div class="layui-input-inline">
-                           <img th:src="'image/'+${commodity.img}" width="140px" height="140px">
+                          <label class="layui-form-label">商品图片</label>
+                          <div class="layui-input-inline">
+                          <input th:src="'image/'+${commodity.img}" width="140px" height="140px" type="file" name="myFile" />
                             </div>
                         </div>
                         <div class="layui-form-item">
