--- a/SCM_Water_frontDesk/src/main/resources/templates/login.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
 		</header>
 		<section class="aui-scrollView">
 			<div class="aui-code-box">
-				<form id="fm1">
+				<form action="login" method="post">
 					<p class="aui-code-line">
 						<input type="text" class="aui-code-line-input"  name="phone"
 							value="" id="phone1" autocomplete="off" placeholder="手机号" />
@@ -60,8 +60,8 @@
 					</div>
 
 					<div class="aui-code-btn">
-						<!-- <button onclick="binding()">登录</button> -->
-						<input type="button" value="登录" onclick="binding()">
+						<button>登录</button>
+						<!-- <input type="button" value="登录"> -->
 					</div>
 				</form>
 			</div>
@@ -96,40 +96,6 @@
 								.addClass('operate-eye-open');
 					}
 				})
-		function binding() {
-			alert(1);
-			var form = new FormData(document.getElementById("fm1"));
-			$.ajax({
-				url : "login",
-				type : "post",
-				data : form,
-				dataType : "json",
-				processData : false,
-				contentType : false,
-				success : function(data) {
-					alert(2);
-
-					if (data.userid == "0") {
-						$("#phoneCount").show();
-						alert(3);
-					} else {
-						alert(4);
-						//创建两个Cookie对象
-						Cookie nameCookie = new Cookie("username", data.name);
-						//设置Cookie的有效期为3天
-						nameCookie.setMaxAge(60 * 60 * 24 * 3);
-						Cookie pwdCookie = new Cookie("password", data.password);
-						pwdCookie.setMaxAge(60 * 60 * 24 * 3);
-						response.addCookie(nameCookie);
-						response.addCookie(pwdCookie);
-						location = "/home";
-					}
-				},
-				error : function(e) {
-					alert("报错");
-				}
-			});
-		}
 	</script>
 
 </body>
