--- a/SCM_Water_Back/src/main/resources/templates/login.html
+++ b/SCM_Water_Back/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +19,7 @@
                     <label class="beg-login-icon">
                         <i class="layui-icon">&#xe612;</i>
                     </label>
+                    
                     <input type="text" lay-verify="required" name="staffname" autocomplete="off" placeholder="这里输入账号" class="layui-input" lay-verType="tips">
                 </div>
                 <div class="layui-form-item">
