--- a/SCM_Water_frontDesk/src/main/resources/templates/integral_mall.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/integral_mall.html
@@ -38,7 +38,7 @@
             <section class="aui-scrollView">
                 <div class="aui-flex aui-flex-color">
                     <div class="aui-flex-box">
-                        <h2>您拥有的积分:<!--  <em th:text="${user.integrate}">2338分</em> --></h2>
+                        <h2>您拥有的积分: <em th:text="${user.integrate}"></em></h2>
                     </div>
                     <div class="aui-arrow"></div>
                 </div>
