--- a/SCM_Water_Back/src/main/resources/templates/orderAlready_zf.html
+++ b/SCM_Water_Back/src/main/resources/templates/orderAlready_zf.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>layout 后台大布局 - Layui</title>
   <link rel="stylesheet" href="./layui/css/layui.css">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./icheck/minimal/red.css">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -19,7 +21,7 @@
       <li class="layui-nav-item">
         <a href="javascript:;">
           <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-          贤心
+            贤心
         </a>
         <dl class="layui-nav-child">
           <dd><a href="">基本资料</a></dd>
@@ -32,20 +34,17 @@
   
   <div class="layui-side layui-bg-black">
     <div class="layui-side-scroll">
-      <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+     <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
       <ul class="layui-nav layui-nav-tree"  lay-filter="test">
         <li class="layui-nav-item"><a class="layui-this" href="index.html">控制台</a></li>
         <li class="layui-nav-item">
             <a href="javascript:;">基本信息</a>
-           <dl class="layui-nav-child">
-                <!--  <dd><a href="admin.html">客户基本信息</a></dd>
-                <dd><a href="role.html">员工基本信息</a></dd>
-                <dd><a href="adminRole.html">提供商基本信息</a></dd>
-                <dd><a href="adminRole.html">商品基本信息</a></dd>-->
+         <dl class="layui-nav-child"> 
                 <dd><a href="customer">客户基本信息</a></dd>
                 <dd><a href="show.html">员工基本信息</a></dd>
                 <dd><a href="supper.html">提供商基本信息</a></dd>
            </dl> 
+        </li>
         <li class="layui-nav-item">
             <a href="javascript:;">订单管理</a>
             <dl class="layui-nav-child">
@@ -78,80 +77,73 @@
     <!-- 内容主体区域 -->
     <div style="padding: 15px;">
         <fieldset class="layui-elem-field">
-            <legend>控制台-系统信息</legend>
+            <legend>订单管理 - 待办任务</legend>
             <div class="layui-field-box">
-                <table class="layui-table">
-                    <colgroup>
-                        <col width="150">
-                        <col width="200">
-                        <col>
-                    </colgroup>
-                    <thead>
-                        <tr>
-                        <th>昵称</th>
-                        <th>加入时间</th>
-                        <th>签名</th>
-                        </tr> 
-                    </thead>
-                    <tbody>
-                        <tr>
-                        <td>贤心</td>
-                        <td>2016-11-29</td>
-                        <td>人生就像是一场修行</td>
-                        </tr>
-                        <tr>
-                        <td>许闲心</td>
-                        <td>2016-11-28</td>
-                        <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
-                        </tr>
-                        <tr>
-                        <td>sentsin</td>
-                        <td>2016-11-27</td>
-                        <td> Life is either a daring adventure or nothing.</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </fieldset>
-        <fieldset class="layui-elem-field">
-          <legend>控制台-最新公告</legend>
-          <div class="layui-field-box">
+              <form class="layui-form" action="">
+                <div class="layui-form-item" style="text-align:center;">
+                  <div class="layui-inline">
+                    <div class="layui-input-inline">
+                      <input autocomplete="off" class="layui-input" placeholder="请输入名称" type="text" name="name" value="">
+                    </div>
+                  </div>
+                  <div class="layui-inline" style="text-align:left;">
+                    <div class="layui-input-inline">
+                      <button class="layui-btn"><i class="layui-icon">&#xe615;</i>查询</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+              <hr>
+              <div class="layui-btn-group">
+                  <button class="layui-btn layui-btn-xs dw-refresh">
+                      <i class="layui-icon">&#x1002;</i>刷新
+                  </button>
+              </div>
+              <hr>
               <table class="layui-table">
                   <colgroup>
                       <col width="150">
+                      <col width="150">
                       <col width="200">
+                      <col>
                       <col>
                   </colgroup>
                   <thead>
                       <tr>
-                      <th>昵称</th>
-                      <th>加入时间</th>
-                      <th>签名</th>
+                      <th>订单编号</th>
+                      <th>用户名</th>
+                      <th>地址</th>
+                      <th>联系电话</th>
+                      <th>下单时间</th>
+                      <th>订单总金额</th>
+                      <th>订单状态</th>
+                      <th style="text-align:center;">操作</th>
                       </tr> 
                   </thead>
+                  <tr th:each="entries,stat:${order}">
+                 <td th:text="${entries.numberr}"></td>
+                 <td th:text="${entries.name}"></td>
+                 <td th:text="${entries.address}"></td>
+                 <td th:text="${entries.phone}"></td>
+                 <td th:text="${#dates.format(entries.ordertime,'yyyy-MM-dd')}"></td>
+                 <td th:text="${entries.money}"></td>
+                 <td th:text="${entries.status}"></td> 
+                 <td class="text-center">
+                           <div class="layui-btn-group">
+                              <button class="layui-btn layui-btn-xs layui-btn-normal dw-dailog" th:dw-url="orderAlreadySelect"  dw-title="编辑用户">
+                              <i class="layui-icon">&#xe642;</i>审核
+                              </button>
+                            </div>
+                      </td> 
+                  </tr>  
+                  </th:block>
                   <tbody>
-                      <tr>
-                      <td>贤心</td>
-                      <td>2016-11-29</td>
-                      <td>人生就像是一场修行</td>
-                      </tr>
-                      <tr>
-                      <td>许闲心</td>
-                      <td>2016-11-28</td>
-                      <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
-                      </tr>
-                      <tr>
-                      <td>sentsin</td>
-                      <td>2016-11-27</td>
-                      <td> Life is either a daring adventure or nothing.</td>
-                      </tr>
                   </tbody>
               </table>
-          </div>
-      </fieldset>
+            </div>
+        </fieldset>
     </div>
   </div>
-  
   <div class="layui-footer">
     <!-- 底部固定区域 -->
     © layui.com - 底部固定区域
@@ -159,6 +151,9 @@
 </div>
 <script type="text/javascript" src="./javascript/jquery.min.js"></script>
 <script type="text/javascript" src="./layui/layui.js"></script>
-<script type="text/javascript" src="./javascript/index.js"></script>
+<script type="text/javascript" src="./icheck/icheck.js"></script>
+<script type="text/javascript" src="./javascript/dw.js"></script>
+<script>
+</script>
 </body>
 </html>
