--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/cart.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/cart.html
@@ -122,7 +122,7 @@
 	<script type="text/javascript">
 		$(function() {
 			showtotal();
-			selCart();
+		/* 	selCart(); */
 		})
 		$(".headerpage").load("lm/header.html");
 		$(".footerpage").load("lm/footer.html");
