--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/settleAccount.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/settleAccount.html
@@ -13,7 +13,79 @@
 <link rel="stylesheet" href="lm/style.css">
 <link rel="stylesheet" href="lm/css/responsive.css">
 <script src="lm/js/vendor/modernizr-2.8.3.min.js"></script>
+<style type="text/css">
+.wrap {
+	margin: 5px auto;
+	width: 329px;
+	height: 100px;
+	padding-top: 10px;
+}
 
+.queren {
+	margin: 0px 100px auto;
+}
+
+.inputBoxContainer {
+	width: 240px;
+	height: 50px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.inputBoxContainer .bogusInput {
+	width: 100%;
+	height: 100%;
+	border: #c3c3c3 1px solid;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	overflow: hidden;
+	position: absolute;
+	z-index: 0;
+}
+
+.inputBoxContainer .realInput {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	filter: alpha(opacity = 0);
+	-moz-opacity: 0;
+	opacity: 0;
+}
+
+.inputBoxContainer .bogusInput input {
+	padding: 0;
+	width: 16.3%;
+	height: 100%;
+	float: left;
+	background: #ffffff;
+	text-align: center;
+	font-size: 20px;
+	border: none;
+	border-right: #C3C3C3 1px solid;
+}
+
+.inputBoxContainer .bogusInput input:last-child {
+	border: none;
+}
+
+.confirmButton {
+	width: 240px;
+	height: 45px;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	background: #f4f4f4;
+	border: #d5d5d5 1px solid;
+	display: block;
+	font-size: 16px;
+	margin: 30px auto;
+	margin-bottom: 20px;
+}
+</style>
 </head>
 
 <body>
@@ -24,6 +96,7 @@
 		<header class="header-section section sticker">
 			<div class="headerpage"></div>
 		</header>
+		<!-- <form action="" method="post" onsubmit="return payGo()"> -->
 		<div class="page-banner-section section">
 			<div class="container">
 				<div class="row">
@@ -49,37 +122,36 @@
 					</div>
 					<div class="checkout-form">
 						<div class="col-lg-6 col-md-6 mb-40">
-							<form action="#">
-								<h3>结账明细</h3>
-								<div class="coupon-form mb-30">
-									<h3>收货地址</h3>
-									<select id="addressId" onchange="address()">
-										<option th:each="takeAddress,status:${addlist}"
-											th:value="${takeAddress.taId}"
-											th:text="${takeAddress.address}"></option>
-									</select>
-								</div>
-								<div class="coupon-form mb-30">
-									<h3>手机号码</h3>
-									<input type="text" name="phone"
-										th:each="takeAddress,status:${addlist}"
-										th:if="${status.count}==1" th:value="${takeAddress.phone}" />
-								</div>
-								<div class="coupon-form mb-30">
-									<h3>联系人</h3>
-									<input type="text" name="name"
-										th:each="takeAddress,status:${addlist}"
-										th:if="${status.count}==1" th:value="${takeAddress.name}" />
-								</div>
-								<div class="row"></div>
-								<h3>
-									<label for="ship_form"> 需要添加收货地址?<a href="个人信息">点击这里</a></label>
-								</h3>
-								<div class="order-notes">
-									<label for="order_note">订单备注</label>
-									<textarea id="order_note" name="remark" placeholder="请输入您的备注"></textarea>
-								</div>
-							</form>
+
+							<h3>结账明细</h3>
+							<div class="coupon-form mb-30">
+								<h3>收货地址</h3>
+								<select id="addressId" onchange="address()">
+									<option th:each="takeAddress,status:${addlist}"
+										th:value="${takeAddress.taId}"
+										th:text="${takeAddress.address}"></option>
+								</select>
+							</div>
+							<div class="coupon-form mb-30">
+								<h3>手机号码</h3>
+								<input type="text" name="phone"
+									th:each="takeAddress,status:${addlist}"
+									th:if="${status.count}==1" th:value="${takeAddress.phone}" />
+							</div>
+							<div class="coupon-form mb-30">
+								<h3>联系人</h3>
+								<input type="text" name="name"
+									th:each="takeAddress,status:${addlist}"
+									th:if="${status.count}==1" th:value="${takeAddress.name}" />
+							</div>
+							<div class="row"></div>
+							<h3>
+								<label for="ship_form"> 需要添加收货地址?<a href="个人信息">点击这里</a></label>
+							</h3>
+							<div class="order-notes">
+								<label for="order_note">订单备注</label>
+								<textarea id="order_note" name="remark" placeholder="请输入您的备注"></textarea>
+							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-12 mb-40">
 							<div class="coupon-form mb-30">
@@ -106,13 +178,17 @@
 											<tr>
 												<th class="product-name">商品</th>
 												<th class="product-total">总</th>
+
 											</tr>
 										</thead>
+
 										<tbody th:if="${way}==1">
 											<tr>
 												<td class="product-name"><strong class="product-qty"><span
 														th:text="${commodity.state}"></span><span>×</span><span
-														class="count" th:text="${count}"></span></strong></td>
+														class="count" th:text="${count}"></span></strong> <input
+													type="hidden" th:value="${commodity.commodityid}"
+													name="commodityidd"></td>
 												<td class="product-total"><span class="amount"><span>￥</span><span
 														class="total"
 														th:text="${#numbers.formatDecimal(total, 0, 2)}"></span></span></td>
@@ -146,6 +222,7 @@
 											</tr>
 										</tfoot>
 									</table>
+									<input type="hidden" th:value="${way}" name="way">
 								</div>
 								<div id="sbmorder" class="modal fade">
 									<div class="container">
@@ -155,30 +232,53 @@
 													<span aria-hidden="true">&times;</span>
 												</button>
 												<h3>支付</h3>
+												<p style="color: black;">
+													付款金额&nbsp;<span
+														th:text="${#numbers.formatDecimal(total, 0, 2)}"
+														class="payAmount"></span>&nbsp;元
+												</p>
 												<div class="col-lg-6 col-md-6 col-xs-12 mb-40">
 													<div class="coupon-form mb-30">
 														<div>
 															<p>请选择您的支付方式</p>
-															<select>
-																<option>微信</option>
-																<option>支付宝</option>
-																<option>我的钱包</option>
+															<select onchange="way()" id="wayy">
+																<option value="1">支付宝</option>
+																<option value="2">我的钱包</option>
 															</select>
 														</div>
 													</div>
 												</div>
 
-												<div class="col-lg-6 col-md-6 col-xs-12 mb-40">
+												<div class="col-lg-6 col-md-6 col-xs-12 mb-40" id="wallet"
+													style="display: none;">
 													<div class="coupon-form mb-30">
 														<div>
-															<p>请输入钱包支付密码</p>
-															<input type="password" /> <br> <a href="#"><input
-																type="submit" value="确认支付" /></a>
+															<p>请输入钱包6位支付密码</p>
+															<div class="wrap">
+																<div class="inputBoxContainer" id="inputBoxContainer">
+																	<input type="text" class="realInput" />
+																	<div class="bogusInput">
+																		<input type="password" maxlength="6" disabled /> <input
+																			type="password" maxlength="6" disabled /> <input
+																			type="password" maxlength="6" disabled /> <input
+																			type="password" maxlength="6" disabled /> <input
+																			type="password" maxlength="6" disabled /> <input
+																			type="password" maxlength="6" disabled />
+																	</div>
+																</div>
+																<p></p>
+																<input type="submit" value="确认支付" class="queren"
+																	onclick="payGo()" />
+																<!-- <button id="confirmButton" class="confirmButton">查看</button>  -->
+																<p class="showValue" id="showValue"
+																	style="display: none;"></p>
+															</div>
+															<!-- <input type="password" /> <br> <a href="#"></a> -->
 														</div>
-														<div style="display: none;">
+														<!-- <div style="display: none;">
 															<p>请扫码支付</p>
 															二维码
-														</div>
+														</div> -->
 													</div>
 												</div>
 											</div>
@@ -194,14 +294,21 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
+		<!-- </form> -->
+		<div class="footerpage"></div>
 	</div>
+
+
 	<script src="lm/js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="lm/js/bootstrap.min.js"></script>
 	<script src="lm/js/plugins.js"></script>
 	<script src="lm/js/ajax-mail.js"></script>
 	<script src="lm/js/main.js"></script>
 	<script>
+		$(".headerpage").load("lm/header.html");
+		$(".footerpage").load("lm/footer.html");
 		$(function() {
 			var giftcouponId = $("#giftcouponId").val();
 			if (giftcouponId == 0) {
@@ -241,6 +348,7 @@
 				discounts = "不使用";
 				$(".discounts").html(discounts);
 				$(".totals").html(lastTotal);
+				$(".payAmount").html(lastTotal);
 			} else {
 				$.ajax({
 					url : "selGiftcouponById?id=" + giftcouponId,
@@ -266,12 +374,148 @@
 						}
 						$(".discounts").html(discounts);
 						$(".totals").html(lastTotal);
+						$(".payAmount").html(lastTotal);
 					},
 					error : function() {
 						alert("失败");
 					}
 				});
 			}
+		}
+		/* 	----------------------- */
+		(function() {
+			var container = document.getElementById("inputBoxContainer");
+			boxInput = {
+				maxLength : "",
+				realInput : "",
+				bogusInput : "",
+				bogusInputArr : "",
+				callback : "",
+				init : function(fun) {
+					var that = this;
+					this.callback = fun;
+					that.realInput = container.children[0];
+					that.bogusInput = container.children[1];
+					that.bogusInputArr = that.bogusInput.children;
+					that.maxLength = that.bogusInputArr[0]
+							.getAttribute("maxlength");
+					that.realInput.oninput = function() {
+						that.setValue();
+					}
+					that.realInput.onpropertychange = function() {
+						that.setValue();
+					}
+				},
+				setValue : function() {
+					this.realInput.value = this.realInput.value.replace(/\D/g,
+							"");
+					console.log(this.realInput.value.replace(/\D/g, ""))
+					var real_str = this.realInput.value;
+					for (var i = 0; i < this.maxLength; i++) {
+						this.bogusInputArr[i].value = real_str[i] ? real_str[i]
+								: "";
+					}
+					if (real_str.length >= this.maxLength) {
+						this.realInput.value = real_str.substring(0, 6);
+						this.callback();
+					}
+				},
+				getBoxInputValue : function() {
+					var realValue = "";
+					for ( var i in this.bogusInputArr) {
+						if (!this.bogusInputArr[i].value) {
+							break;
+						}
+						realValue += this.bogusInputArr[i].value;
+					}
+					return realValue;
+				}
+			}
+		})()
+		boxInput.init(function() {
+			getValue();
+		});
+		/*  document.getElementById("confirmButton").onclick = function() {
+			getValue();
+		}  */
+		function getValue() {
+			document.getElementById("showValue").innerText = boxInput
+					.getBoxInputValue();
+		}
+		/* -------------------------------- */
+
+		function way() {
+			if ($("#wayy").val() == 2) {
+				$("#wallet").show();
+			}
+			if ($("#wayy").val() == 1) {
+				$("#wallet").hide();
+			}
+		}
+
+		function payGo() {
+			var payAmount = $(".payAmount").text();
+			var password = $(".showValue").text();
+			var zfpwd;
+			var money;
+			$.ajax({
+				url : "selByUserId",
+				type : "POST",
+				dataType : "json",
+				contentType : "application/json;charset=UTF-8",
+				success : function(data) {
+					zfpwd = data.zfpwd;
+					money = data.money;
+					if (payAmount > data.money) {
+						alert("支付失败,您的钱包余额不足!")
+					} else if (data.zfpwd != password) {
+						alert("支付失败,支付密码输入不正确!");
+					} else {
+						//地址
+						var address = $("#addressId option:selected").text();
+						//联系人
+						var name = $("input[name=name]").val();
+						var remark = $("input[name=remark]").val();
+						var phone = $("input[name=phone]").val()
+						var totals = $(".totals").text();
+						var way = $("input[name=way]").val()
+						var commodityidd = $("input[name=commodityidd]").val();
+						var count = $(".count").text();
+						//优惠劵id
+						var giftcouponId = $("#giftcouponId").val();
+						var urlStr = "placeOrder?address=" + address
+								+ "&linkman=" + name + "&remark=" + remark
+								+ "&phone=" + phone + "&money=" + totals
+								+ "&way=" + way+"&giftcouponId="+giftcouponId;
+						if (way == 1) {
+							urlStr = urlStr + "&commodityidd=" + commodityidd
+									+ "&count=" + count;
+						}
+						$.ajax({
+							url : urlStr,
+							type : "POST",
+							dataType : "json",
+							contentType : "application/json;charset=UTF-8",
+							success : function(data) {
+								if (data > 0) {
+									if (confirm("下单成功,是否去查看我的订单?")) {
+										location.href = "myorder";
+									}else{
+										alert("下单失败");
+									}
+								}
+							},
+							error : function() {
+								alert("失败");
+							}
+						});
+					}
+				},
+				error : function() {
+					alert("失败");
+				}
+			});
+
 		}
 	</script>
 </body>
